--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
-    "@babel/runtime": "^7.22.3",
+    "@babel/runtime": "^7.24.4",
     "@kangc/v-md-editor": "^1.7.11",
     "axios": "^1.3.5",
     "babel-plugin-prismjs": "^2.1.0",
@@ -23,7 +23,7 @@
     "mavon-editor": "^2.10.4",
     "naive-ui": "^2.34.3",
     "qs": "^6.11.1",
-    "vue": "^2.7.7",
+    "vue": "^2.7.16",
     "vue-axios": "^3.5.2",
     "vue-codemirror": "^4.0.6",
     "vue-router": "^3.5.4",
@@ -39,5 +39,10 @@
     "terser": "^5.14.2",
     "vite": "^3.0.2",
     "vue-cli-plugin-vuetify": "~2.5.8"
-  }
+  },
+  "description": "This template should help get you started developing with Vue 3 in Vite.",
+  "main": "vite.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
