--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
-    "@kangc/v-md-editor": "^1.7.12",
+    "@babel/runtime": "^7.24.5",
+    "@kangc/v-md-editor": "^1.1.0",
     "@vue/runtime-dom": "^3.4.21",
     "axios": "^1.6.7",
     "element-ui": "^2.15.14",
