--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-plugin-prismjs": "^2.1.0",
     "chart.js": "^4.2.1",
     "codemirror": "^5.65.13",
+    "data-fns": "^1.1.0",
     "echarts": "^5.4.2",
     "element-ui": "^2.15.13",
     "identicon.js": "^2.3.3",
@@ -28,6 +29,7 @@
     "vue-codemirror": "^4.0.6",
     "vue-router": "^3.5.4",
     "vue-scroll": "^2.1.13",
+    "vue-tour": "^2.0.0",
     "vuetify": "^2.6.0"
   },
   "devDependencies": {
