--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "vue": "^2.7.16",
     "vue-axios": "^3.5.2",
     "vue-router": "^3.6.5",
+    "vue-tour": "^2.0.0",
     "vuetify": "^2.7.2"
   }
 }
