--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vue-codemirror": "^4.0.6",
     "vue-router": "^3.5.4",
     "vue-scroll": "^2.1.13",
+    "vue-tour": "^2.0.0",
     "vuetify": "^2.6.0"
   },
   "devDependencies": {
